Fix business header spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -421,25 +421,30 @@ button:hover {
   display: flex;
   flex-direction: column;
   height: 100%;
-  width: 100%;
+  width: 50%;
+  min-width: 764px;
   padding: 0;
   align-items: center;
+  margin: auto;
+  left: 0px;
 }
 
 .show-page-header-info-list li {
   margin-left: auto;
   margin-right: auto;
+  
 }
 
 .show-page-biz-header {
   position: relative;
   height: 430px;
   color: white;
-  display: flex;
-  justify-content: center;
-  max-width: 1500px;
+  display: block;
+  /* justify-content: center; */
+  /* max-width: 1500px; */
   /* min-width: 1500px; */
   margin: auto;
+  left: 0;
   overflow: hidden;
 }
 .show-page-header-info {
@@ -449,13 +454,14 @@ button:hover {
   width: 100%;
   min-width: 764px;
   justify-self: center;
+  margin: auto;
 }
 .show-page-header-photos {
   position: absolute;
   margin-left: auto;
   /* left: 40px; */
   height: 100%;
-  /* max-width: 1000px; */
+  max-width: 1500px;
   display: flex;
   justify-content: center;
   filter: brightness(60%);
@@ -470,20 +476,20 @@ button:hover {
   /* justify-content: flex-end; */
 }
 
-.show-page-photo-col {
+/* .show-page-photo-col {
   height: 100%;
-  /* min-width: auto; */
   width: 100%;
-}
+} */
 
 .show-page-header-photos img{
   position: relative;
   /* display: block; */
-  /* width: auto; */
-  min-width: 100%;
+  width: 100%;
+  /* min-width: 100%; */
   height: 100%;
-  margin: auto;
+  /* margin: auto; */
   /* left: 100px; */
+  object-fit: cover;
 }
 
 .show-page-name {
@@ -754,7 +760,7 @@ button:hover {
 }
 
 .review-item-container {
-  margin: 30px 0px;
+  margin: 35px 0px;
 
 }
 
